# lark-monitor-server

./: .env  pyproject.toml  readme.md
.github/workflows/: deploy.yml
deploy/: lark-monitor.service
server/: app.py
server/router/: index.py  raw_msg.py
server/service/: opt_msg.py
server/static/static/js/: lib-router.97145d2b.js
server/static/static/js/async/: 145.e18915ba.js  145.e18915ba.js.LICENSE.txt  263.f67cbb79.js.LICENSE.txt  273.059aa88a.js  273.059aa88a.js.LICENSE.txt  30.5463c518.js  516.1fab0b1d.js  516.1fab0b1d.js.LICENSE.txt  566.9566e3ad.js  566.9566e3ad.js.LICENSE.txt  737.ab8378e7.js  737.ab8378e7.js.LICENSE.txt  773.4665576b.js  847.056d36c7.js
src/monitor/service/: account.py  msg.py
src/monitor/utils/: client.py  store.py
src/server/: __main__.py  app.py
src/server/model/: work_order.py
src/server/router/: index.py  opt_msg.py  raw_msg.py  work_order.py
src/server/schema/: work_order.py
src/server/service/: opt_msg.py  raw_msg.py  work_order.py
src/server/static/: index.html
src/server/static/static/css/: index.7b9f4338.css
src/server/static/static/js/: 452.5d9cb72e.js  452.5d9cb72e.js.LICENSE.txt  index.2adef4f7.js  lib-axios.70f8b059.js  lib-react.b9e4d8e5.js
src/server/static/static/js/async/: 233.dc64ad2f.js  263.f67cbb79.js  332.5276f0d7.js  378.0257a73f.js  530.77efa25f.js  530.77efa25f.js.LICENSE.txt  688.92f3da27.js  688.92f3da27.js.LICENSE.txt
src/server/utils/: db_helper.py  msg_parser.py  opt_msg.py  sync_helper.py
