[project]
name = "lark-monitor-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beanie>=2.0.1",
    "fastapi>=0.135.1",
    "motor>=3.7.1",
    "uvicorn>=0.41.0",
]

# 单一仓库配置系统
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/*"]
