[project]
name = "lark-monitor-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beanie>=2.0.1",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "lark-oapi>=1.5.3",
    "motor>=3.7.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]

# 单一仓库配置系统
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/*"]
